# dc-remover

./: .gitignore  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  check_errors.txt  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/core/: auth.rs  captcha.rs  cleaner.rs  mod.rs  scraper.rs
src/components/: Dashboard.tsx  LoginPage.tsx
