[package]
name = "dc-remover"
version = "0.1.0"
description = "DC Remover"
authors = ["Nyabi"]
edition = "2021"

[lib]
name = "dc_remover_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "cookies", "blocking", "multipart"] }
scraper = "0.22"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
url = "2.5"
async-trait = "0.1.89"
